data/derived/fa15/progs/unify/prog0712.ml.out
Characters 46-59:
  if n < 0 then [] else digitsOfInt n/10 :: [n mod 10];;
                        ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
